--- a/arne/style.css
+++ b/arne/style.css
@@ -26,7 +26,7 @@ hgroup, p {
 }
 
 html {
-	position:absolute; z-index:-1;
+	position:absolute;
 	top:0; bottom:0; left:0; right: 0;
 	overflow:auto;
 }
