Improve style sheet of home page
- WebKit on iOS still doesn't support background-attachment: fixed, but
  with the new-ish background-size: cover, we can at least have it
  degrade acceptably, rather than tile the image all over the place.

- Padding to the <html> element's bottom is not shown. My bad I guess.
  So now a bottom padding to the <body> element ensures that the last
  paragraph isn't glued against the viewport bottom.

--- a/arne/style.css
+++ b/arne/style.css
@@ -1,26 +1,21 @@
 /* start zapper */
 * {margin: 0; padding: 0; font-size: 1em; font-weight: normal; font-variant: normal; font-style: normal; text-indent: 0; border: none;}
-/*
-:active {cursor: progress}
-a:hover, a:active {cursor: default}
-ul, ol {list-style:inside none}
-a img, table, table th, table td {border:none}
-*/
 /* end zapper */
 
 html {
 	background: #333 url(bg-photo.jpg) repeat fixed 60% 50%;
-	-webkit-background-size: 1843px 1078px;
+	background-size: cover;
 	width: 80%;
 	max-width: 960px;
 	margin: 0 auto;
-	padding: 4em 0;
+	padding: 4em 0 0;
 	font: 17px/1.36 "Myriad Pro", "Myriad", "Verdana", sans-serif;
 	color: black;
 	text-align: left;
 }
 hgroup, p {
 	background: #eee url(bg-container.jpg) repeat fixed 60% 50%;
+	background-size: cover;
 	margin: 1.5em 0;
 	padding: .5em .75em;
 }
@@ -32,18 +27,9 @@ html {
 }
 body {
 	position:relative;
-/*
-	float:left;
-*/
 	width:100%;
-	padding:0;
+	padding:0 0 4em;
 }
-
-/* known issue:
- * iOS WebKit doesn't support background-attachment: fixed
- * until I have a solution, the background is set to repeat itself;
- * this looks really bad, but is still better than the alternative
- */
 
 hgroup, h1 {
 	letter-spacing: .08em;
